tests/outref/TSQ007.ref

SELECT n.nspname                              AS "Schema",
       c.relname                              AS "Name",
       CASE c.relkind
         WHEN 'r' THEN 'table'
         WHEN 'v' THEN 'view'
         WHEN 'm' THEN 'materialized view'
         WHEN 'i' THEN 'index'
         WHEN 'S' THEN 'sequence'
         WHEN 's' THEN 'special'
         WHEN 'f' THEN 'foreign table'
         WHEN 'p' THEN 'table'
         WHEN 'I' THEN 'index'
       end                                    AS "Type",
       pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
FROM   pg_catalog.pg_class c
       LEFT JOIN pg_catalog.pg_namespace n
              ON n.oid = c.relnamespace
WHERE  c.relkind IN ( 'r', 'p', 'v', 'm',
                      'S', 'f', '' )
       AND n.nspname <> 'pg_catalog'
       AND n.nspname <> 'information_schema'
       AND n.nspname !~ '^pg_toast'
       AND pg_catalog.Pg_table_is_visible(c.oid)
ORDER  BY 1,
          2;

[ INFO] PATH:LINENUM DATE TIME : INFO_RECORDING_ENV_VARS : # Recording pertinent ydb_* env var values at process startup
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'PG_CATALOG.PG_GET_USERBYID' defined with given parameter types (INTEGER)
Error with syntax near (line 14, column 8):

SELECT n.nspname                              AS "Schema",
       c.relname                              AS "Name",
       CASE c.relkind
         WHEN 'r' THEN 'table'
         WHEN 'v' THEN 'view'
         WHEN 'm' THEN 'materialized view'
         WHEN 'i' THEN 'index'
         WHEN 'S' THEN 'sequence'
         WHEN 's' THEN 'special'
         WHEN 'f' THEN 'foreign table'
         WHEN 'p' THEN 'table'
         WHEN 'I' THEN 'index'
       end                                    AS "Type",
       pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
       ^^^^^^^^^^^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'PG_CATALOG.PG_TABLE_IS_VISIBLE' defined with given parameter types (INTEGER)
Error with syntax near (line 23, column 12):

SELECT n.nspname                              AS "Schema",
       c.relname                              AS "Name",
       CASE c.relkind
         WHEN 'r' THEN 'table'
         WHEN 'v' THEN 'view'
         WHEN 'm' THEN 'materialized view'
         WHEN 'i' THEN 'index'
         WHEN 'S' THEN 'sequence'
         WHEN 's' THEN 'special'
         WHEN 'f' THEN 'foreign table'
         WHEN 'p' THEN 'table'
         WHEN 'I' THEN 'index'
       end                                    AS "Type",
       pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
FROM   pg_catalog.pg_class c
       LEFT JOIN pg_catalog.pg_namespace n
              ON n.oid = c.relnamespace
WHERE  c.relkind IN ( 'r', 'p', 'v', 'm',
                      'S', 'f', '' )
       AND n.nspname <> 'pg_catalog'
       AND n.nspname <> 'information_schema'
       AND n.nspname !~ '^pg_toast'
       AND pg_catalog.Pg_table_is_visible(c.oid)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT n.nspname                              AS "Schema",
       c.relname                              AS "Name",
       CASE c.relkind
         WHEN 'r' THEN 'table'
         WHEN 'v' THEN 'view'
         WHEN 'm' THEN 'materialized view'
         WHEN 'i' THEN 'index'
         WHEN 'S' THEN 'sequence'
         WHEN 's' THEN 'special'
         WHEN 'f' THEN 'foreign table'
         WHEN 'p' THEN 'table'
         WHEN 'I' THEN 'index'
       end                                    AS "Type",
       pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
FROM   pg_catalog.pg_class c
       LEFT JOIN pg_catalog.pg_namespace n
              ON n.oid = c.relnamespace
WHERE  c.relkind IN ( 'r', 'p', 'v', 'm',
                      'S', 'f', '' )
       AND n.nspname <> 'pg_catalog'
       AND n.nspname <> 'information_schema'
       AND n.nspname !~ '^pg_toast'
       AND pg_catalog.Pg_table_is_visible(c.oid)
ORDER  BY 1,
          2;
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command [SELECT n.nspname                              AS "Schema",
       c.relname                              AS "Name",
       CASE c.relkind
         WHEN 'r' THEN 'table'
         WHEN 'v' THEN 'view'
         WHEN 'm' THEN 'materialized view'
         WHEN 'i' THEN 'index'
         WHEN 'S' THEN 'sequence'
         WHEN 's' THEN 'special'
         WHEN 'f' THEN 'foreign table'
         WHEN 'p' THEN 'table'
         WHEN 'I' THEN 'index'
       end                                    AS "Type",
       pg_catalog.Pg_get_userbyid(c.relowner) AS "Owner"
FROM   pg_catalog.pg_class c
       LEFT JOIN pg_catalog.pg_namespace n
              ON n.oid = c.relnamespace
WHERE  c.relkind IN ( 'r', 'p', 'v', 'm',
                      'S', 'f', '' )
       AND n.nspname <> 'pg_catalog'
       AND n.nspname <> 'information_schema'
       AND n.nspname !~ '^pg_toast'
       AND pg_catalog.Pg_table_is_visible(c.oid)
ORDER  BY 1,
          2;]
[ INFO] PATH:LINENUM DATE TIME : INFO_RETURNING_FAILURE : Returning failure from run_query
[ INFO] PATH:LINENUM DATE TIME : INFO_PARSING_DONE : Parsing done for SQL command []
